
2001-08-11  Corey Minyard <minyard@acm.org>

	* devcfg.h, devcfg.c, controller.c, dataxfer.c, dataxfer.h, ser2net.8:
	Ben Adams sent a patch to control the DTR and RTS lines, I rewrote
	it to make a new command to do this (instead of using devconfig,
	which didn't really match the devconfig's operation).

	* configure.in, ser2net.spec: Updated to version 1.5

2001-07-26  Corey Minyard <minyard@acm.org>

	* devcfg.c - Added CREAD to the cflags so the serial port will
	work, patch from Andreas Pfaller.

	* dataxfer.c - Added binary transmission to the list of telnet
	opeions, again from Andreas Pfaller.

2001-07-23  Corey Minyard <minyard@acm.org>

	* devcfg.c, ser2net.8, ser2net.conf  - Added a patch from Martin
	Boese to add CLOCAL and XON/XOFF support as serial port options.

2001-07-03  Corey Minyard <minyard@acm.org>
	
	* Makefile.am, ser2net.1, ser2net.8, ser2net.spec - Moved ser2net
	to /usr/sbin, renamed the makefile to have a .8 extension and
	put it in /usr/share/man.

	* controller.c - Fixed problems with telnet handling in the
	control interface.
	
	* Updated to version 1.4
	
2001-06-29  Corey Minyard <minyard@acm.org>

	* ser2net.spec - Actually put the changed version number in
	the file, set the prefix to '/usr'.

	* configure.in - Added libnsl for Redhat systems, changed
	to AC_CHECK_LIB.

	* all - changed to version 1.3.

2001-06-28  Corey Minyard <minyard@acm.org>

	* dataxfer.c - Added the ability to convert a telnet break
	to a serial port break.

	* configure.in - Updated to version 1.3

	* ser2net.spec - Added this file for RPM building, from Ivan
	Francolin Martinez.

	* dataxfer.c - Added a tcp_wrappers implementation, from Ivan
	Francolin Martinez.  However, some configure work needs to
	be done to make it actually work properly.

	* dataxfer.c, controller.c, configure.in, ser2net.1 - Fixed the
	tcp_wrappers stuff to work properly, did the config stuff for it,
	and added it to the control port as well.
