@@ -1,4 +1,9 @@
 
+2001-10-05  Przemyslaw Czerpak (druzus@polbox.com)
+
+	* controller.c, dataxfer.c, devcfg.c, ser2net.init, ser2net.spec:
+	Added an init, and cleaned up a bunch of type warnings.
+
 2001-08-11  Corey Minyard <minyard@acm.org>
 
 	* devcfg.h, devcfg.c, controller.c, dataxfer.c, dataxfer.h, ser2net.8:
